# Q-SCL

./: .gitignore  README.md  init.js  init_ledger.py  init_ledger2.py  init_ledger3.py  quantum_provider.py  requirements.txt  run.sh
q_scl_frontend/: init_script.ts  next.config.mjs  package-lock.json  package.json
q_scl_frontend/src/app/: globals.css  layout.tsx  page.tsx
q_scl_frontend/src/context/: QSCLProvider.tsx
q_scl_frontend/src/idl/: q_scl_ledger.ts
q_scl_frontend/src/lib/: program.ts  q_scl_ledger.json
q_scl_ledger/: Anchor.toml
q_scl_ledger/programs/q_scl_ledger/: Cargo.toml
q_scl_ledger/programs/q_scl_ledger/src/: lib.rs
q_scl_ledger/tests/: q_scl_ledger.ts
