[package]
name = "q_scl_ledger"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "q_scl_ledger"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
# Manual downgrades to avoid edition2024 breakdown on Solana 1.79.0 BPF rustc:
blake3 = "=1.5.0"
constant_time_eq = "=0.3.1"
getrandom = "=0.2.14"
